<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="aula.amargarin.trabalho_1_android.AddNovoOrcamento">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtCategoria"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txtCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/txtLoja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLoja"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txtLoja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10" >
        </EditText>

        <TextView
            android:id="@+id/txtValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtValor"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/txtPagamento" />

        <TextView
            android:id="@+id/txtPagamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtPagamento"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txtPagamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10" >
        </EditText>

        <TextView
            android:id="@+id/txtObservacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtObservacao"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/txtObservacao" />

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSalvar" />

    </LinearLayout>
</RelativeLayout>
